# fireFightingGameThing

./: .gitignore  CMakeLists.txt  Readme.md  todo.md
resources/data/core/sprites/: asphalt.sprite  brick.sprite  brick2.sprite  grass.sprite  grass_0.sprite  grass_1.sprite  grass_2.sprite  grass_3.sprite  grass_4.sprite  grass_e1.sprite  grass_e10.sprite  grass_e11.sprite  grass_e12.sprite  grass_e13.sprite  grass_e14.sprite  grass_e15.sprite  grass_e2.sprite  grass_e3.sprite  grass_e4.sprite  grass_e5.sprite  grass_e6.sprite  grass_e7.sprite  grass_e8.sprite  grass_e9.sprite  lightDirt.sprite  soil.sprite  soil2.sprite  stone.sprite  stone2.sprite  tree.sprite  water.sprite  water_0.sprite  water_1.sprite  water_2.sprite  water_3.sprite  water_4.sprite  wood.sprite  wood2.sprite
resources/data/core/tiles/: asphalt.tile  brick.tile  brick2.tile  concrete.cfg  concrete.tile  grass.cfg  grass.tile  lightDirt.tile  soil.tile  soil2.tile  stone.tile  stone2.tile  water.tile  woodFloor.tile  woodFloor2.tile
shader/: sprite.frag  sprite.vert
src/: App.h  Map.cpp  Map.h  MouseController.cpp  MouseController.h  TileType.h  buildinElements.cpp  buildinElements.h  defaultElements.cpp  defaultElements.h  gameState.h  layer.h  main.cpp  resourceManagemant.cpp  resourceManagement.h
src/contentCreation/: MapEditor.cpp  MapEditor.h  MapEditorScene.cpp  MapEditorScene.h
src/dataModel/: Map.cpp  Map.h  RootedObjectType.cpp  RootedObjectType.h  TileType.cpp  TileType.h
src/engine/: Camera2D.cpp  Camera2D.h  SpriteRenderer.cpp  SpriteRenderer.h
src/gameElements/: Map.cpp  Map.h  RootedObject.cpp  RootedObject.h
src/gameLogic/: GameObject.cpp  GameObject.h
src/gameplay/: FreePlay.cpp  FreePlay.h  Operation.cpp  Operation.h
src/rendering/: mapRendering.h
src/tilemap/: Map.cpp  Map.h
